Hotfix - Extend margin to prevent footer overlap

--- a/app/assets/stylesheets/limber/screen.scss
+++ b/app/assets/stylesheets/limber/screen.scss
@@ -17,6 +17,8 @@ header.limber-header {
   }
 }
 
+#app { margin-bottom: 100px; }
+
 #flashes {
   @extend .col-12;
 }
